Updated to compile with a more recent version of Java by Anthony Howe https://github.com/SirWumpus/Ladder